--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -100,6 +100,7 @@ a:hover {
 } */
 
 
+
 .centerAreaRightItem{
   margin-left: 0vw;
   margin-right: 0vw;
@@ -107,7 +108,9 @@ a:hover {
   margin-bottom: 1vw;  
   width: 20vw;
   height: auto;/*30vh*/
-  background: rgba(255, 0, 0, 1);
+  word-wrap: break-word;
+  
+  background: rgba(255, 255, 255, 1);
   color: rgba(0, 255, 0, 1);  
 
   align-content: top;
