--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -117,6 +117,9 @@ a:hover {
   align-items: top;   
   vertical-align: top;  
   text-align: left;  
+
+  font-family: 'Noto Sans SC Sliced', sans-serif;
+  
 }
 .centerAreaRight{
   /* position: 76vw 31vh; */
@@ -161,7 +164,9 @@ a:hover {
   align-items: top;   
   vertical-align: top;  
   text-align: left;
-
+  font-family: 'Noto Sans SC Sliced', sans-serif;
+  /* font-weight: bold; */
+  /* font-size: 12px; */
 }
 
 
@@ -188,7 +193,7 @@ a:hover {
 .centerArea{
   margin-left: 5vw;
   margin-right: 5vw;
-  margin-top: 1vw;
+  margin-top: 1vh;/*1vw*/
   margin-bottom: 0vw;  
 
   width: 90vw;
@@ -324,8 +329,8 @@ a:hover {
 .headerElement {
   margin-left: 5vw;
   margin-right: 5vw;
-  margin-top: 0vw;
-  margin-bottom: 0vw;  
+  margin-top: 0vh;
+  margin-bottom: 5vh; /*0vh*/ 
 
   display: block;  
   width: 90vw;
@@ -337,11 +342,12 @@ a:hover {
   line-height: 10vh; 
   font-weight: bold;
   font-size: 18px; 
+  /* position: fixed; */
 }
 .outerMostContainer {
   background: rgb(255, 25, 255, 1);
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   display: block;  
   align-content: center;
   align-items: center;  
