--- a/server/static/css/calendarComponentStyle.css
+++ b/server/static/css/calendarComponentStyle.css
@@ -66,7 +66,14 @@ body {
 .Calendar-grid-item.prevMonth {
   color: #999;
 }
-
+.Calendar-grid-item.hasEvent {
+  background-color: blue;
+  color: white;
+}  
+.Calendar-grid-item.hasNoEvent {
+  background-color: white;
+  
+}  
 .Calendar-grid-item:nth-child(7n+1) {
   border-left: 1px solid #ddd;
 }
